<resources>
    <string name="app_name">Sign up</string>
    <string name="name">Name</string>
    <string name="second_name">Second name</string>
    <string name="birthday">Birthday</string>
    <string name="password">Password</string>
    <string name="password_verification">Password verification</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="greetings">Greetings</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome</string>
</resources>