<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="#E0F2F1"
    android:orientation="vertical"
    android:id="@+id/dialogView">

    <TextView
        android:id="@+id/dtvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dtvName"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dtvLastName"
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dbClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#4DD0E1"
        android:text="@string/hello"
        android:textSize="17sp"/>


</LinearLayout>